# chatkit-gemini-bot

./: .env.example  .gitignore  README.md  run.bat  run.sh
.claude/agents/: chatkit-expert.md
.claude/commands/: chatkit.backend.md  chatkit.debug.md  chatkit.frontend.md  chatkit.quickstart.md
.claude/skills/: chatkit-agent-memory.skill.md  chatkit-backend.skill.md  chatkit-debug.skill.md  chatkit-frontend.skill.md  chatkit-store.skill.md
.specify/memory/: chatkit-knowledge.md
backend/: main.py  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
specs/chatkit-gemini/: plan.md  spec.md  tasks.md
